--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "nodemon": "^1.19.0"
   }
 }
