--- a/client/package.json
+++ b/client/package.json
@@ -28,5 +28,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "node-sass": "^4.12.0"
+  }
 }
