--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "node-sass": "^4.12.0"
   }
 }
