--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Érik Monjas",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "nodemon": "^1.19.0"
   },
   "dependencies": {
