--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install server": "npm install --prefix server",
-    "install client": "npm install --prefix client",
+    "install-server": "npm install --prefix server",
+    "install-client": "npm install --prefix client",
     "server": "nodemon server/index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "samyroad": "npm install && npm run install-server && npm run install-client && npm run dev"
   },
   "keywords": [],
   "author": "Érik Monjas",
