--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001",
+  "proxy": {
+    "target": "http://localhost:3001"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "node-sass": "^4.12.0"
