--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "react-scripts": "3.0.1",
+    "node-sass": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,9 +33,5 @@
   },
   "proxy": {
     "target": "http://localhost:3001"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "node-sass": "^4.12.0"
   }
 }
